# hardrails

./: .gitignore  .mcp.json.example  CITATION.cff  NOTICE  README.md  conftest.py  hardrails-spec.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
netagent/: README.md  __init__.py  approval.py  artifacts.py  audit.py  boundary.py  cve_source.py  devices.py  inventory.yaml  models.py  remediation.py  server.py
netagent/data/: README.md  psirt_cache.json  psirt_cache.json.example
scripts/: generate_psirt_cache.py  provision_netbox_ro_token.py  seed_netbox.py
tests/: test_approval_workflow.py  test_audit_checks.py  test_boundary_audit_log.py  test_cve_consolidation.py  test_remediation.py  test_segmentation.py  test_server_propose.py
