[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hardrails"
version = "0.1.0.dev0"
description = "Hardrails reference implementation: a bounded network agent. Deterministic boundaries around a non-deterministic agent."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Garrett Masters (G Talks Tech)" }]
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

# `pip install hardrails` stays light: the spec + the data models. The full
# runnable agent (MCP server, Netmiko device access, live CVE lookup, NetBox
# intent drift) is opt-in:  pip install hardrails[lab]
[project.optional-dependencies]
lab = [
    "fastmcp>=2.0",
    "netmiko>=4.3",
    "pyyaml>=6",
    "httpx>=0.27",
    "pynetbox>=7",
]
keywords = ["ai-agents", "network-automation", "mcp", "guardrails", "bounded-agents", "netmiko"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/GTalksTech/hardrails"
Specification = "https://github.com/GTalksTech/hardrails/blob/main/hardrails-spec.md"
Channel = "https://www.youtube.com/@GTalksTechOfficial"

[tool.setuptools]
packages = ["netagent"]

[tool.setuptools.package-data]
# The inventory and the provenance-stamped PSIRT cache travel with an install
# so clone-and-run works offline (no Cisco API credentials needed to reproduce).
netagent = ["inventory.yaml", "data/*.json", "data/*.json.example", "data/README.md"]
